# sci

./: .gitignore  .gitlab-ci.yml
.gitlab-ci/: Dockerfile.linux  Dockerfile.linux.prebuild  build.bat  build.sh  build.yml  docker_setup.sh  docker_setup.yml  postbuild.yml  prebuild.bat  prebuild.sh  prebuild.yml  publish.yml  test.bat  test.yml
.gitlab-ci/linux-images/: Dockerfile.fedora  Dockerfile.ubuntu
scilab/: CHANGES.md  Makefile.am  Makefile.in  Scilab.sln  aclocal.m4  build.incl.xml.in  build.qa.incl.xml  configure  configure.ac  scilab-lib.properties.in  scilab-lib.properties.vc
scilab/contrib/: Makefile.in
scilab/desktop/: Makefile.in
scilab/etc/: classpath.xml.in  classpath.xml.vc  jvm_options.xml
scilab/m4/: hdf5.m4  java-thirdparty.m4
scilab/modules/: Makefile.am  Makefile.in
scilab/modules/action_binding/: Makefile.am  Makefile.in
scilab/modules/api_scilab/: Makefile.am  Makefile.in
scilab/modules/arnoldi/: Makefile.am  Makefile.in
scilab/modules/ast/: Makefile.am  Makefile.in  core_Import.def
scilab/modules/atoms/: Makefile.in
scilab/modules/boolean/: Makefile.in
scilab/modules/cacsd/: Makefile.am  Makefile.in
scilab/modules/call_scilab/: Makefile.am  Makefile.in
scilab/modules/commons/: Makefile.am  Makefile.in
scilab/modules/completion/: Makefile.am  Makefile.in
scilab/modules/console/: Makefile.am  Makefile.in  console.iss
scilab/modules/core/: Makefile.am  Makefile.in
scilab/modules/coverage/: Makefile.am  Makefile.in
scilab/modules/data_structures/: Makefile.in
scilab/modules/demo_tools/: Makefile.in
scilab/modules/development_tools/: Makefile.in
scilab/modules/differential_equations/: Makefile.am  Makefile.in
scilab/modules/dynamic_link/: Makefile.in
scilab/modules/elementary_functions/: Makefile.am  Makefile.in
scilab/modules/external_objects/: Makefile.am  Makefile.in
scilab/modules/external_objects_java/: Makefile.am  Makefile.in  external_objects_java.iss
scilab/modules/functions_manager/: Makefile.am  Makefile.in
scilab/modules/functions_manager/includes/: dynamic_modules.hxx  module_declaration.hxx
scilab/modules/functions_manager/src/cpp/: dynamic_modules.cpp  funcmanager.cpp
(+961 files in other folders)
